--- a/admin-panel/css/admin.css
+++ b/admin-panel/css/admin.css
@@ -6,7 +6,8 @@
     font-family: 'Ubuntu', sans-serif;
 }
 :root{
-    --blue: #287bff;
+    --primary-color: #1d06b1;
+    --primary-hover: rgb(39, 39, 245);
     --white: #fff;
     --grey: #f5f5f5; 
     --black1: #222;
@@ -23,12 +24,12 @@ a{
     padding: 10px;
     margin: 10px;
     width: 100px;
-    background-color: rgb(55, 52, 57);
+    background-color: var(--primary-color);
     border-radius: 2px;
     color: white;
 }
 .admin-btn:hover{
-    background-color: rgb(21, 20, 21);
+    background-color: var(--primary-hover);
     cursor: pointer;
 }
 
@@ -89,7 +90,7 @@ a{
     float: right;
     width: 125px;
     margin-top: -5px;
-    background-color: rgb(4, 116, 10);
+    background-color: var(--primary-color);
 }
 .admin-content .page-title{
     text-align: center;
