--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,100 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;500;600;700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Hanken Grotesk', sans-serif;
 }
- 
+
+:root {
+    --primary-color: #1d06b1;
+    --white: #fff;
+    --black: #000;
+    --red: rgb(238, 17, 17);
+    --box-shadow: 2px 10px 2px 2px rgba(68, 68, 212, 0.5);
+    --tagline: #777;
+    --blog-title: rgb(17, 17, 227);
+    --button: rgb(39, 39, 234);
+    --button-hover: rgb(4, 4, 131);
+}
+
 /************************ NAVBAR ***************************/
-nav.navbar{
+nav.navbar {
     display: flex;
-    background-color: #333;
+    background-color: var(--primary-color);
     height: 100px;
     width: 100%;
-    justify-content:space-between; 
+    justify-content: space-between;
     overflow: hidden;
-    position: fixed; 
+    position: fixed;
     z-index: 1000;
 }
-.navbar .logo h1{
+
+.navbar .logo h1 {
     font-size: 50px;
-    color: #fff;
+    color: var(--white);
     line-height: 100px;
     margin-left: 100px;
 }
-.navbar ul.links{
+
+.navbar ul.links {
     display: flex;
     line-height: 60px;
     list-style: none;
     margin-right: 100px;
 }
-.navbar .links li{
+
+.navbar .links li {
     padding: 20px;
 }
-.navbar .links li a{
+
+.navbar .links li a {
     font-size: 20px;
-    color: #fff;
+    color: var(--white);
     text-decoration: none;
 }
-.navbar .links li a:hover{
+
+.navbar .links li a:hover {
     padding: 10px;
     border-radius: 10px;
-    background-color: #fff;
-    color: #000;    
+    background-color: var(--white);
+    color: var(--black);
 }
-.navbar .links li .logout{
-    color: rgb(238, 17, 17);
+
+.navbar .links li .logout {
+    color: var(--red);
+    font-weight: 600;
 }
-.navbar .links li .logout:hover{
-    color: rgb(240, 15, 15);
+
+.navbar .links li .logout:hover {
+    color: var(--red);
 }
-.navbar i{
+
+.navbar i {
     font-size: 30px;
-    color: #fff;
+    color: var(--white);
     line-height: 100px;
-} 
-.menu_open,.menu_close{
+}
+
+.menu_open,
+.menu_close {
     display: none;
 }
-@media(max-width:1000px){
-    .menu_open,.menu_close{ 
+
+@media(max-width:1000px) {
+
+    .menu_open,
+    .menu_close {
         display: block;
         margin-right: 100px;
     }
-    .navbar ul.links{
+
+    .navbar ul.links {
         display: none;
         position: absolute;
         /* display: block; */
-        background-color: #333;
+        background-color: var(--primary-color);
         top: 0;
         right: -500px;
         height: 100%;
@@ -75,41 +103,47 @@ nav.navbar{
         position: fixed;
         z-index: 10000;
     }
-    .navbar ul.links.active{
+
+    .navbar ul.links.active {
         right: -100px;
         display: block;
     }
 }
 
 /************** BANNER ****************/
-.slide-container{
+.slide-container {
     position: relative;
     top: 100px;
     width: 100%;
 }
-.slide img{
+
+.slide img {
     width: 100%;
     height: 380px;
 }
-.arrow{
+
+.arrow {
     cursor: pointer;
     position: absolute;
     top: 45%;
-    color: black;
+    color: var(--black);
     background-color: rgba(255, 255, 255, 0.712);
     padding: 8px 20px;
     border-radius: 50%;
     font-size: 25px;
     font-weight: bold;
 }
-.next{
+
+.next {
     right: 10px;
 }
-.prev{
+
+.prev {
     left: 10px;
 }
-.caption{
-    color: white;
+
+.caption {
+    color: var(--white);
     font-size: 30px;
     font-weight: bold;
     position: absolute;
@@ -119,21 +153,24 @@ nav.navbar{
     background-color: rgba(0, 0, 0, 0.5);
     padding: 15px 0px;
 }
-.slide{
+
+.slide {
     display: none;
 }
 
 /*********** BLOGS SECTION **************/
-.blogs-section{
+.blogs-section {
     position: relative;
     top: 100px;
 }
-.blogs-section .container{
+
+.blogs-section .container {
     width: 100%;
     min-height: 100vh;
-   
+
 }
-.blogs-section  .blogs{
+
+.blogs-section .blogs {
     width: 80%;
     margin: 0px auto;
     display: flex;
@@ -141,114 +178,136 @@ nav.navbar{
     justify-content: center;
     align-items: center;
 }
-.blogs-section .heading{
+
+.blogs-section .heading {
     text-align: center;
     padding: 10px;
     margin: 10px auto;
 }
-.blogs-section .heading h1{
+
+.blogs-section .heading h1 {
     font-size: 40px;
-    color: rgb(60, 171, 9);
+    color: var(--primary-color);
 }
-.blogs-section .heading h4{
-    color: #777;
+
+.blogs-section .heading h4 {
+    color: var(--tagline);
 }
-.blogs-section .cards{
+
+.blogs-section .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 8px;
 }
-.blogs-section .cards .card{
-    height: 400px;
+
+.blogs-section .cards .card {
+    height: 420px;
     width: 350px;
     margin: 30px 15px;
+    /* box-shadow: 2px 10px 2px 2px rgba(68, 68, 212, 0.5); */
+    box-shadow: var(--box-shadow);
+
 }
-.blogs-section .card img{
+
+.blogs-section .card img {
     width: inherit;
     height: 200px;
     padding: 10px;
 }
-.blogs-section .card .tagline{
+
+.blogs-section .card .tagline {
     font-size: 17px;
-    color: #000;
+    color: var(--black);
     font-weight: 700;
     margin: 5px 10px;
 }
-.blogs-section .tagline span{
-    color: #777;
+
+.blogs-section .tagline span {
+    color: var(--tagline);
 }
-.blogs-section .title{
-    color: rgb(17, 17, 227);
+
+.blogs-section .title {
+    color: var(--blog-title);
     font-weight: 500;
     font-size: 20px;
     margin: 5px 10px;
 }
-.blogs-section .card .content{
+
+.blogs-section .card .content {
     margin: 5px 10px;
     font-size: 15px;
     color: #363333;
     line-height: 1.4;
 }
-.blogs-section .card a{
+
+.blogs-section .card a {
     text-decoration: none;
     padding: 5px 10px;
     margin: 15px 10px;
-    background-color: rgb(39, 39, 234);
-    color: #fff;
+    background-color: var(--button);
+    color: var(--white);
     font-size: 18px;
     border-radius: 10px;
 }
-.blogs-section .card a:hover{
-    background-color: rgb(4, 4, 131);
+
+.blogs-section .card a:hover {
+    background-color: var(--button-hover);
 }
 
 @media screen and (max-width: 980px) {
-    .blogs-section .cards{
-        grid-template-columns: repeat(2,1fr);
+    .blogs-section .cards {
+        grid-template-columns: repeat(2, 1fr);
     }
-    
+
 }
 
 @media screen and (max-width: 580px) {
-    .blogs-section .cards{
-        grid-template-columns: repeat(1,1fr);
+    .blogs-section .cards {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
 
 /*********** FOOTER ***************/
-.footer{
+.footer {
     position: relative;
     top: 100px;
 }
-.footer .container{
+
+.footer .container {
     max-width: 1170px;
     margin: auto;
 }
-.footer .row{
+
+.footer .row {
     display: flex;
     flex-wrap: wrap;
 }
-.footer ul{
+
+.footer ul {
     list-style: none;
 }
-.footer{
-    background-color: #24262b;
+
+.footer {
+    background-color: var(--primary-color);
     padding: 70px 0;
 }
-.footer-col{
+
+.footer-col {
     width: 25%;
     padding: 0 15px;
 }
-.footer-col h4{
+
+.footer-col h4 {
     font-size: 18px;
-    color: #ffffff;
+    color: var(--white);
     text-transform: capitalize;
     margin-bottom: 35px;
     font-weight: 500;
     position: relative;
 }
-.footer-col h4::before{
+
+.footer-col h4::before {
     content: '';
     position: absolute;
     left: 0;
@@ -258,24 +317,28 @@ nav.navbar{
     box-sizing: border-box;
     width: 50px;
 }
-.footer-col ul li:not(:last-child){
+
+.footer-col ul li:not(:last-child) {
     margin-bottom: 10px;
 }
-.footer-col ul li a{
+
+.footer-col ul li a {
     font-size: 16px;
     text-transform: capitalize;
-    color: #ffffff;
+    color: var(--white);
     text-decoration: none;
     font-weight: 300;
-    color: #bbbbbb;
+    color: var(--white);
     display: block;
     transition: all 0.3s ease;
 }
-.footer-col ul li a:hover{
-    color: #ffffff;
+
+.footer-col ul li a:hover {
+    color: var(--white);
     padding-left: 8px;
 }
-.footer-col .social-links a{
+
+.footer-col .social-links a {
     display: inline-block;
     height: 40px;
     width: 40px;
@@ -284,22 +347,24 @@ nav.navbar{
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
-    color: #ffffff;
+    color: var(--white);
     transition: all 0.5s ease;
 }
-.footer-col .social-links a:hover{
+
+.footer-col .social-links a:hover {
     color: #24262b;
-    background-color: #ffffff;
+    background-color: var(--white);
 }
 
 /*responsive*/
-@media(max-width: 767px){
+@media(max-width: 767px) {
     .footer-col {
         width: 50%;
         margin-bottom: 30px;
     }
 }
-@media(max-width: 574px){
+
+@media(max-width: 574px) {
     .footer-col {
         width: 100%;
     }
