--- a/css/forms.css
+++ b/css/forms.css
@@ -5,14 +5,23 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+:root{
+    --primary-color: #1d06b1;
+    --primary-hover: rgb(39, 39, 245);
+    --background: #5281ba;
+    --white: #fff;
+    --grey: #f5f5f5; 
+    --black1: #222;
+    --black2: #999;
+}
 body{
-    background: #dfe9f5;
+    background: var(--background);
 }
 .wrapper{
     width: 330px;
     padding: 2rem 1rem;
     margin: 50px auto;
-    background-color: #fff;
+    background-color: var(--white);
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
@@ -40,12 +49,12 @@ button{
     outline: none;
     border: none;
     width: 90%;
-    color: #fff ;
+    color: var(--white) ;
     cursor: pointer;
-    background: rgb(17, 107, 143);
+    background: var(--primary-color);
 }
 button:hover{
-    background: rgba(17, 107, 143, 0.877);
+    background: var(--primary-hover);
 }
 input:focus{
     border: 1px solid rgb(192, 192, 192);
@@ -60,7 +69,7 @@ input:focus{
     font-size: 0.7rem;
 }
 .terms a{
-    color: rgb(17, 107, 143);
+    color: var(--primary-color);
     text-decoration: none;
 }
 .member{
@@ -69,7 +78,7 @@ input:focus{
     color: #636363;
 }
 .member a{
-    color: rgb(17, 107, 143);
+    color: var(--primary-color);
     text-decoration: none;
 }
 .recover{
