--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     font-family: 'Hanken Grotesk', sans-serif;
 }
 
+body{
+    scroll-behavior: smooth;
+}
+
 :root {
     --primary-color: #1d06b1;
     --white: #fff;
@@ -201,12 +205,10 @@ nav.navbar {
 }
 
 .blogs-section .cards .card {
-    height: 420px;
+    height: 400px;
     width: 350px;
     margin: 30px 15px;
-    /* box-shadow: 2px 10px 2px 2px rgba(68, 68, 212, 0.5); */
     box-shadow: var(--box-shadow);
-
 }
 
 .blogs-section .card img {
@@ -234,7 +236,7 @@ nav.navbar {
 }
 
 .blogs-section .card .content {
-    margin: 5px 10px;
+    margin: 20px 10px;
     font-size: 15px;
     color: #363333;
     line-height: 1.4;
